--- a/assembler/CMakeLists.txt
+++ b/assembler/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 include_directories(.)
 
-add_executable(assembler
+add_executable(
         assembler.c
         firstStage.c
         secondStage.c
